--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  engines: {
+    node: 6.10.X,
+    npm: 3.10.X
+  },
   "dependencies": {
-    "body-parser": "~1.16.0",
-    "connect-mongo": "^1.3.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.0",
-    "ejs": "~2.5.5",
-    "express": "~4.14.1",
-    "express-session": "^1.15.1",
-    "mongoose": "^4.8.6",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
+    "body-parser": "~1.16.X",
+    "connect-mongo": "^1.3.X",
+    "cookie-parser": "~1.4.X",
+    "debug": "~2.6.X",
+    "ejs": "~2.5.X",
+    "express": "~4.14.X",
+    "express-session": "^1.15.X",
+    "mongoose": "^4.8.X",
+    "morgan": "~1.7.X",
+    "serve-favicon": "~2.3.X"
   }
 }
