--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-  engines: {
-    node: 6.10.X,
-    npm: 3.10.X
+  "engines": {
+    "node": "6.10.X",
+    "npm": "3.10.X"
   },
   "dependencies": {
     "body-parser": "~1.16.X",
